# cpp-cmake-skeleton

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake-build-and-test.yml
apps/: skeleton.cpp
include/skeleton/: lib.hpp
src/: skeletonlib.cpp
tests/: mock-objects.hpp  unittests.cpp
